--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
+    "svg-react-loader": "^0.3.7",
     "watch": "^0.19.1",
     "webpack": "^1.13.0"
   },
